# libuart

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benchmark/: peer_a.c  peer_b.c
docs/: API.md  PROTOCOL.md
inc/: uni_communication.h
src/: uni_communication.c
utils/: uni_crc16.c  uni_crc16.h  uni_interruptable.c  uni_interruptable.h  uni_log.c  uni_log.h
